# playground

./: .gitignore  README.md
async-await-rust/: Cargo.toml
async-await-rust/src/: do_nothing.rs  main.rs  sleep_print.rs
attention/: attention.py  attention_kv.py  pyproject.toml
borrow-rust/: Cargo.toml  README.md
borrow-rust/src/: double_borrow.rs  double_hash_map.rs  main.rs
c-serialization-rust/: Cargo.toml
c-serialization-rust/src/: main.rs
cgroup-rust/: Cargo.toml  README.md
cgroup-rust/src/: main.rs
channel-rust/: Cargo.toml
channel-rust/src/: main.rs
closure-rust/: Cargo.toml  README.md
closure-rust/src/: data_structure.rs  fn_examples.rs  fn_mut_examples.rs  fn_once_examples.rs  main.rs
comment-app/: .eslintrc.cjs  .gitignore  README.md  package.json
comment-app/src/: App.tsx  Comment.tsx  CommentInput.tsx  CommentList.tsx  index.tsx  model.ts
cuda-101/device-props/: Makefile  main.cu
cuda-101/sgemm/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  sgemm.cu  simplest_kernel.cu
cuda-101/sgemm/skills/sgemm-visualization/: SKILL.md
cuda-101/sgemm/skills/sgemm-visualization/agents/: openai.yaml
cuda-101/sgemm/skills/sgemm-visualization/references/: sgemm-animation-patterns.md
cuda-101/sgemm/src/: kernels.cuh  runner.cu  runner.cuh
cuda-101/sgemm/src/kernels/: 10_kernel_warptiling.cuh  1_naive.cuh  2_kernel_global_mem_coalesce.cuh  3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  5_kernel_2D_blocktiling.cuh  6_kernel_vectorize.cuh  7_kernel_resolve_bank_conflicts.cuh  8_kernel_bank_extra_col.cuh  9_kernel_autotuned.cuh
cuda-101/sgemm/visualizations/: kernel1_naive.html  kernel1_naive.js  kernel2_global_memory_coalescing.html  kernel3_shared_memory.html  kernel4_1d_blocktiling.js  kernel5_2d_blocktiling.html  kernel5_2d_blocktiling.js  kernel6_vectorize.html  kernel7_resolve_bank_conflicts.html  kernel7_resolve_bank_conflicts.js  kernel9_autotuned.html  kernel_animation.css  kernel_animation_common.js
cuda-101/sgemm/visualizations/drawio/: kernel10_pic1_tiling_hierarchy.drawio  kernel10_pic2_warptiling.drawio  kernel10_pic3_logic_tile.drawio  kernel10_pic4_register_reuse.drawio  kernel10_pic5_vs_kernel6_compute.drawio  kernel10_pic6_load_vs_kernel6.drawio  kernel10_pic7_warp_schedulers.drawio  kernel10_pic8_outer_product_reuse.drawio  kernel2_block_compute.drawio  kernel2_c_matrix_grid.drawio  kernel2_redundant_B_loads.drawio  kernel3_pic1_pointers_and_tiling.drawio  kernel3_pic2_dot_product.drawio  kernel3_shared_memory_tiling.drawio  kernel4_1d_blocktiling.drawio  kernel4_pic1_c_matrix_grid.drawio  kernel4_pic2_load_to_smem.drawio  kernel4_pic3_thread_mapping.drawio  kernel4_pic3b_thread_closeup.drawio  kernel4_pic3c_outer_loop.drawio  kernel4_pic3d_k_loop.drawio  kernel4_pic3e_sharing_pattern.drawio  kernel4_pic3f_logic_tile.drawio  kernel5_pic1_arith_intensity.drawio  kernel5_pic2_load_to_smem.drawio  kernel5_pic3_logic_tile.drawio  kernel5_pic4_outer_product.drawio  kernel6_pic1_vectorize_vs_coalesce.drawio  kernel6_pic2_transpose_As.drawio
cuda-101/sgemm/visualizations/html/: kernel1_naive.html  kernel2_global_memory_coalescing.html  kernel2_global_memory_coalescing.js  kernel3_shared_memory.html  kernel3_shared_memory.js  kernel4_1d_blocktiling.html  kernel6_vectorize.js  kernel8_bank_extra_col.html  kernel8_bank_extra_col.js  kernel9_autotuned.js  kernel_animation.css
cuda-101/tensor-core/: CMakeLists.txt  CMakePresets.json  NVIDIA_LICENSE.txt  README.md
cuda-101/tensor-core/src/Common/: exception.h  helper_cuda.h  helper_functions.h  helper_image.h  helper_string.h  helper_timer.h
cuda-101/tensor-core/src/cudaTensorCoreGemm/: cudaTensorCoreGemm.cu
cuda-101/tensor-core/visualizations/: shmem_sz_breakdown.drawio  tensor_core_mac_array.drawio  tensor_core_systolic_wavefront.drawio  tensor_core_utilization_fill_drain.drawio  tensor_core_warp_register_tile.drawio  wmma_chunk_k_streaming.drawio  wmma_compute_gemm_flow.drawio  wmma_gemm_overview.drawio
cuda-101/transpose/: Makefile  main.cu
cuda-101/vec-add/: Makefile  main.cu
cuda-101/vec-add-uma/: Makefile  main.cu
deref-rust/: Cargo.toml
deref-rust/src/: main.rs
dns-go/: dnsserver.go  go.mod  server
dns-go/client/: client  main.go
dns-go/server/: README.md
dubbo/anttest/: go.mod  go.sum  readme.md
dubbo/generic-nacos-go-client-java-server/: .gitignore  start-nacos.sh  stop-nacos.sh
fp-rust/: Cargo.toml
fp-rust/src/: iter_drain.rs  main.rs
functional-programming-rust/src/: iter_take.rs
go-micro-rpc/client/: go.mod  go.sum  main.go
go-micro-rpc/server/: go.mod  main.go
http-c/: file_server.c
linux-fs-books/2-10-advisory-locking/: Makefile  alock.c  lcat.c
linux-fs-books/2-13-1-sparse-files/: main.c
linux-fs-books/2-14-2-stdio/: main.c
linux-fs-books/2-15-memory-mapped-files/: gen.c  lorem-ipsum-8k.txt  lorem-ipsum.txt  mmap.c
linux-fs-books/2-16-async-io/: .gitignore  main.c
linux-fs-books/2-16-async-io-with-eventfd/: main.c
memory-barriers-c/: sort.c
mutex-rust/: Cargo.toml
mutex-rust/src/: example1.rs  main.rs
netlink-go/: go.mod  main.go  run.sh
netlink-route-c/: Makefile  main.c
nvml-api-rust/: Cargo.toml
phantom-rust/: Cargo.toml
proc-macro-rust/: Cargo.toml
prost-rust/: .gitignore  Cargo.toml  Makefile  README.md
rust-c-ffi/: README.md
serde-rust/: Cargo.toml
socket-app-c/: benchmark_client.c  benchmark_multi_conn_client.c  benchmark_server.c  benchmark_vsock_server.c  getaddrinfo.c  tcp_client.c  tcp_poll_server.c  tcp_sendrecv_client.c  tcp_sendrecv_server.c  tcp_server.c  udp_client.c  udp_server.c  unix_server.c
socket-c/: benchmark_client.c  benchmark_multi_conn_server.c  benchmark_vsock_client.c  ip_setsockopt.c  tcp_client.c  tcp_epoll_client.c  tcp_server.c  udp_poll_server.c  unix_client.c  unix_poll_server.c  unix_server.c  vsock_client.c  vsock_server.c  vsock_server_host.c
tcp-close-wait/: .gitignore  Makefile  client.c  close_wait_test.py  server.c
tcp_stream_test/: Cargo.toml
tsi-stress/: Makefile  go.mod
uds-go/: go.mod
unit-test-java/: pom.xml
(+64 files in other folders)
