[package]
name = "cgroup-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "busyloop"
path = "src/bin/busyloop.rs"

[dependencies]
scan_fmt = "0.2"
libc = "0.2"
signal-hook = "0.3"
clap = { version = "4", features = ["derive"] }
cgroups = { package = "cgroups-rs", path = "/home/nxw/developer/cgroups-rs", features = ["oci"] }
oci-spec = "0.6"
